// file: proto/subtitle/translator/v1/translator.proto
// version: 2.0.0
// guid: 70eca88d-31fe-4044-8b76-a22bd3c9e0bd

edition = "2023";

package subtitle.translator.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_HYBRID;
option go_package = "github.com/jdfalk/subtitle-manager/pkg/subtitle/translator/v1;translatorpb";

// Temporary local types until gcommon is properly integrated
message RequestMetadata {
  string request_id = 1;
  string user_id = 2;
  map<string, string> headers = 3;
}

message Error {
  string code = 1;
  string message = 2;
  string details = 3;
}

service TranslatorService {
  rpc Translate(TranslateRequest) returns (TranslateResponse);
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}

message TranslateRequest {
  RequestMetadata meta = 1;
  string text = 2;
  string language = 3;
}

message TranslateResponse {
  string translated_text = 1;
  repeated Error errors = 2;
}

// Standard request/response wrappers for config operations using gcommon types
message GetConfigRequest {}

message GetConfigResponse {
  // Using map of string->ConfigValue for gcommon compatibility
  // Each key corresponds to a configuration setting
  map<string, string> config_values = 1;
}

message SetConfigRequest {
  // Key-value pairs for configuration settings
  string key = 1;
  string value = 2;
}

message SetConfigResponse {}

// RateLimit defines basic provider rate limiting parameters.
message RateLimit {
  uint32 requests_per_minute = 1;
  uint32 burst = 2;
}

// ProviderInfo describes metadata about a provider service.
message ProviderInfo {
  string name = 1;
  RateLimit rate_limit = 2;
  repeated string capabilities = 3;
}
